hf-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-finance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-finance
  template:
    metadata:
      labels:
        app: hospital-finance
    spec:
      containers:
        - name: hospital-finance
          image: kermakovich/hospital-finance
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
