hf-mongo-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hf-mongo
spec:
  serviceName: hf-mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: hf-mongo
  template:
    metadata:
      labels:
        app: hf-mongo
    spec:
      containers:
        - name: hospital-finance-mg
          image: mongo:5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-initdb
          configMap:
            name: mongo-initdb-config
        - name: mongo-hf-db-disk
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: mongo-hf-db-disk
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
