hu-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-users
  template:
    metadata:
      labels:
        app: hospital-users
    spec:
      serviceAccountName: hospital-users-serviceaccount
      containers:
        - name: hospital-users
          image: kermakovich/hospital-users
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
