zoo-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.2
          imagePullPolicy: Always
          ports:
            - containerPort: 2181
      volumes:
        - name: zookeeper-disk
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: zookeeper-disk
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
