hf-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hf-mongo
spec:
  selector:
    app: hf-mongo
  ports:
    - port: 27017
      targetPort: 27017
