hf-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hf-redis
spec:
  selector:
    app: hf-redis
  ports:
    - port: 6379
      targetPort: 6379
