hf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hospital-finance
spec:
  selector:
    app: hospital-finance
  ports:
    - port: 8082
      targetPort: 8082
