hu-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hu-mongo
spec:
  selector:
    app: hu-mongo
  ports:
    - port: 27018
      targetPort: 27017
