kafka-external-service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-cluster-kafka
  namespace: default
spec:
  type: ExternalName
  externalName: my-cluster-kafka-bootstrap.kafka.svc.cluster.local
  ports:
    - port: 9092
