kf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-service
spec:
  selector:
    app: broker
  ports:
    - port: 9092
      targetPort: 9092
