pg-hf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-hf
spec:
  selector:
    app: postgres-hf
  ports:
    - port: 5432
      targetPort: 5432
