pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-hu
spec:
  selector:
    app: postgres-hu
  ports:
    - port: 5432
      targetPort: 5432
