ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
      - http:
          paths:
            - path: /users-api
              pathType: Prefix
              backend:
                service:
                  name: hospital-users-service
                  port:
                    number: 8090
            - path: /finance-api
              pathType: Prefix
              backend:
                service:
                  name: hospital-finance
                  port:
                    number: 8080
