auth-hf-mongo.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hf-mongo-auth-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: hf-mongo
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/hospital-finance-serviceaccount"]
