auth-hu-mongo.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hu-mongo-auth-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: hu-mongo
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/hospital-users-serviceaccount"]
